# dockyter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: developer-guide.md  sources.md  user-guide.md
docs/api_example/: server.py
docs/examples/: 01_local_cli.ipynb  02_ml_tool_in_docker.ipynb  03_api_backend.ipynb  04_config_profiles.ipynb
docs/exemples/: 01_local_cli.ipynb
src/dockyter/: backend.py  magics.py
tests/: test_notebooks_integration.py
