[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dockyter"
version = "0.1.0"
description = "Run heavy tools in Docker or via an API from Jupyter notebooks"
classifiers = [
  "Framework :: IPython",
  "FRAMEWORK :: Jupyter",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.8.0",
    "requests>=2.32.5",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
  { name = "Simon Masserey", email = "simasserey@gmail.com" },
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "nbconvert>=7.16.6",
    "pytest>=9.0.2",
]
